--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,6 +33,8 @@ jobs:
       with:
         rust-version: ${{ matrix.rust }}
     - uses: actions/checkout@v2
+    - if: matrix.rust == 'nightly'
+    - run: cp tests/trybuild_tests_src/nightly/* .
     - run: cargo test --verbose
     - run: cargo test --verbose --no-default-features
     - run: cargo test --verbose --all-features
@@ -51,6 +53,9 @@ jobs:
     - uses: hecrj/setup-rust-action@v1
     - uses: actions/checkout@v2
     - run: cargo install cross
+    - name: prepare stderr files
+    - if: matrix.rust == 'nightly'
+    - run: cp tests/trybuild_tests_src/nightly/* .
     - run: cross test --verbose --target=${{ matrix.target }} --no-default-features
     - run: cross test --verbose --target=${{ matrix.target }} --all-features
     - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features
@@ -66,6 +71,9 @@ jobs:
     - uses: actions/checkout@v2
     # Note(Lokathor): We got some cached json errors, and so we cargo clean for this run.
     - run: rm -fr target
+    - name: prepare stderr files
+    - if: matrix.rust == 'nightly'
+    - run: cp tests/trybuild_tests_src/nightly/* .
     - run: cargo miri test --verbose --no-default-features
     - run: cargo miri test --verbose --all-features
     - run: cd derive && rm -fr target && cargo miri test --verbose --all-features
@@ -83,6 +91,9 @@ jobs:
       with:
         rust-version: nightly
         components: rust-src
+    - name: prepare stderr files
+    - if: matrix.rust == 'nightly'
+    - run: cp tests/trybuild_tests_src/nightly/* .
     - name: Test with sanitizer
       env:
         RUSTFLAGS: -Zsanitizer=${{ matrix.sanitizer }}
