--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,14 +33,13 @@ jobs:
       with:
         rust-version: ${{ matrix.rust }}
     - uses: actions/checkout@v2
-    - name: replace stderr output
-      if: matrix.rust == 'nightly'
-      run: cp tests/trybuild_tests_src/nightly/* .
     - run: cargo test --verbose
     - run: cargo test --verbose --no-default-features
     - run: cargo test --verbose --all-features
+      if: matrix.rust == 'stable'
+    - run: cargo test --verbose --features="all_features_except_derive"
       if: matrix.rust != '1.34.0'
-    - run: cargo test --verbose --manifest-path=derive/Cargo.toml --all-features
+    - run: cargo test --verbose --manifest-path=derive/Cargo.toml --features="all_features_except_derive"
       if: matrix.rust != '1.34.0'
 
   cross-test:
@@ -53,11 +52,11 @@ jobs:
     steps:
     - uses: hecrj/setup-rust-action@v1
     - uses: actions/checkout@v2
-    - run: cp tests/trybuild_tests_src/nightly/* .
     - run: cargo install cross
     - run: cross test --verbose --target=${{ matrix.target }} --no-default-features
-    - run: cross test --verbose --target=${{ matrix.target }} --all-features
-    - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features
+    - run: cross test --verbose --target=${{ matrix.target }} --features="all_features_except_derive"
+    - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --features="all_features_except_derive"
+
 
   miri-test:
     name: Test with miri
@@ -70,10 +69,10 @@ jobs:
     - uses: actions/checkout@v2
     # Note(Lokathor): We got some cached json errors, and so we cargo clean for this run.
     - run: rm -fr target
-    - run: cp tests/trybuild_tests_src/nightly/* .
     - run: cargo miri test --verbose --no-default-features
-    - run: cargo miri test --verbose --all-features
-    - run: cd derive && rm -fr target && cargo miri test --verbose --all-features
+    - run: cargo miri test --verbose --features="all_features_except_derive"
+    - run: cd derive && rm -fr target && cargo miri test --verbose --features="all_features_except_derive"
+
 
   sanitizer-test:
     name: Test with -Zsanitizer=${{ matrix.sanitizer }}
@@ -88,8 +87,6 @@ jobs:
       with:
         rust-version: nightly
         components: rust-src
-    - name: replace stderr output
-      run: cp tests/trybuild_tests_src/nightly/* .
     - name: Test with sanitizer
       env:
         RUSTFLAGS: -Zsanitizer=${{ matrix.sanitizer }}
@@ -109,4 +106,5 @@ jobs:
       # about anyway.
       run: |
         cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --no-default-features
-        cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --all-features
+        cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --features="all_features_except_derive"
+
