--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ extern_crate_alloc = []
 extern_crate_std = ["extern_crate_alloc"]
 zeroable_maybe_uninit = []
 derive = ["bytemuck_derive"]
+# features for CI and testing
+all_features_except_derive = ["extern_crate_alloc", "extern_crate_std", "zeroable_maybe_uninit"]
 
 [dependencies]
 # use the upper line for testing against bytemuck_derive changes, if any
