--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,6 +36,8 @@ jobs:
     - run: cargo test --verbose
     - run: cargo test --verbose --no-default-features
     - run: cargo test --verbose --all-features
+      if: matrix.rust == 'stable'
+    - run: cargo test --verbose --features="all_features_except_derive"
       if: matrix.rust != '1.34.0'
     - run: cargo test --verbose --manifest-path=derive/Cargo.toml --all-features
       if: matrix.rust != '1.34.0'
@@ -52,8 +54,8 @@ jobs:
     - uses: actions/checkout@v2
     - run: cargo install cross
     - run: cross test --verbose --target=${{ matrix.target }} --no-default-features
-    - run: cross test --verbose --target=${{ matrix.target }} --all-features
-    - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features
+    - run: cross test --verbose --target=${{ matrix.target }} --features="all_features_except_derive"
+    - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features 
 
   miri-test:
     name: Test with miri
@@ -67,8 +69,8 @@ jobs:
     # Note(Lokathor): We got some cached json errors, and so we cargo clean for this run.
     - run: rm -fr target
     - run: cargo miri test --verbose --no-default-features
-    - run: cargo miri test --verbose --all-features
-    - run: cd derive && rm -fr target && cargo miri test --verbose --all-features
+    - run: cargo miri test --verbose --features="all_features_except_derive"
+    - run: cd derive && rm -fr target && cargo miri test --verbose --all-features 
 
   sanitizer-test:
     name: Test with -Zsanitizer=${{ matrix.sanitizer }}
@@ -102,4 +104,5 @@ jobs:
       # about anyway.
       run: |
         cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --no-default-features
-        cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --all-features
+        cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --features="all_features_except_derive"
+
