--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,16 @@ extern_crate_alloc = []
 extern_crate_std = ["extern_crate_alloc"]
 zeroable_maybe_uninit = []
 derive = ["bytemuck_derive"]
+# features for CI and testing
+all_features_except_derive = ["extern_crate_alloc", "extern_crate_std", "zeroable_maybe_uninit"]
 
 [dependencies]
 # use the upper line for testing against bytemuck_derive changes, if any
 #bytemuck_derive = { version = "1.0.1-alpha.0", path = "derive", optional = true }
 bytemuck_derive = { version = "1", optional = true }
+
+[dev-dependencies]
+trybuild = "1.0.40"
 
 [package.metadata.docs.rs]
 all-features = true
