--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,7 +54,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: cargo install cross
     - run: cross test --verbose --target=${{ matrix.target }} --no-default-features
-    - run: cross test --verbose --target=${{ matrix.target }} --features="all_features_except_derive"
+    - run: cross test --verbose --target=${{ matrix.target }} --all-features 
     - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features 
 
   miri-test:
@@ -104,5 +104,6 @@ jobs:
       # about anyway.
       run: |
         cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --no-default-features
-        cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --features="all_features_except_derive"
+        export TRYBUILD=overwrite
+        cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --all-features
 
