--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,8 +35,12 @@ jobs:
     - uses: actions/checkout@v2
     - run: cargo test --verbose
     - run: cargo test --verbose --no-default-features
+    - run: mv tests/trybuild_tests_src/stable/*.stderr tests/trybuild_tests_src
+      if: startsWith(matrix.rust, 'stable')
     - run: mv tests/trybuild_tests_src/nightly/*.stderr tests/trybuild_tests_src
-      if: startsWith(matrix.rust, 'stable') != true
+      if: startsWith(matrix.rust, 'nightly')
+    - run: mv tests/trybuild_tests_src/beta/*.stderr tests/trybuild_tests_src
+      if: startsWith(matrix.rust, 'beta')
     - run: cargo test --verbose --all-features
       if: matrix.rust != '1.34.0'
     - run: cargo test --verbose --manifest-path=derive/Cargo.toml --all-features
@@ -53,6 +57,7 @@ jobs:
     - uses: hecrj/setup-rust-action@v1
     - uses: actions/checkout@v2
     - run: cargo install cross
+    - run: mv tests/trybuild_tests_src/stable/*.stderr tests/trybuild_tests_src
     - run: cross test --verbose --target=${{ matrix.target }} --no-default-features
     - run: cross test --verbose --target=${{ matrix.target }} --all-features 
     - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features 
@@ -68,9 +73,9 @@ jobs:
     - uses: actions/checkout@v2
     # Note(Lokathor): We got some cached json errors, and so we cargo clean for this run.
     - run: rm -fr target
-    - run: mv tests/trybuild_tests_src/nightly/*.stderr tests/trybuild_tests_src
     - run: cargo miri test --verbose --no-default-features
-    - run: cargo miri test --verbose --all-features
+    # Note(mobile-bungalow): don't run derive tests on miri. they fail due to attempted file access.
+    - run: cargo miri test --verbose --features="extern_crate_alloc extern_crate_std zeroable_maybe_uninit"
     - run: cd derive && rm -fr target && cargo miri test --verbose --all-features 
 
   sanitizer-test:
