--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,14 +33,9 @@ jobs:
       with:
         rust-version: ${{ matrix.rust }}
     - uses: actions/checkout@v2
+    - run: export TRYBUILD=overwrite
     - run: cargo test --verbose
     - run: cargo test --verbose --no-default-features
-    - run: mv tests/trybuild_tests_src/stable/*.stderr tests/trybuild_tests_src
-      if: startsWith(matrix.rust, 'stable')
-    - run: mv tests/trybuild_tests_src/nightly/*.stderr tests/trybuild_tests_src
-      if: startsWith(matrix.rust, 'nightly')
-    - run: mv tests/trybuild_tests_src/beta/*.stderr tests/trybuild_tests_src
-      if: startsWith(matrix.rust, 'beta')
     - run: cargo test --verbose --all-features
       if: matrix.rust != '1.34.0'
     - run: cargo test --verbose --manifest-path=derive/Cargo.toml --all-features
@@ -57,7 +52,7 @@ jobs:
     - uses: hecrj/setup-rust-action@v1
     - uses: actions/checkout@v2
     - run: cargo install cross
-    - run: mv tests/trybuild_tests_src/stable/*.stderr tests/trybuild_tests_src
+    - run: export TRYBUILD=overwrite
     - run: cross test --verbose --target=${{ matrix.target }} --no-default-features
     - run: cross test --verbose --target=${{ matrix.target }} --all-features 
     - run: cross test --verbose --target=${{ matrix.target }} --manifest-path=derive/Cargo.toml --all-features 
@@ -109,7 +104,7 @@ jobs:
       # positives, so we just skip it, the generated code is what we care
       # about anyway.
       run: |
-        mv tests/trybuild_tests_src/nightly/*.stderr tests/trybuild_tests_src
+        export TRYBUILD=overwrite
         cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --no-default-features
         cargo test -Zbuild-std --verbose --target=x86_64-unknown-linux-gnu --all-features
 
